--- a/styles/about-hero.module.css
+++ b/styles/about-hero.module.css
@@ -13,7 +13,7 @@
 .iconAndUrlWrapper {
   display: flex;
   gap: 1rem;
-  padding: 2rem 0;
+  padding: 3rem 0;
 }
 .iconList {
   display: flex;
@@ -25,7 +25,7 @@
   border-radius: 50%;
 }
 .description {
-  font-size: clamp(20px, 2.3vw, 32px);
+  font-size: clamp(24px, 3.5vw, 48px);
   font-weight: 200;
 }
 @media (min-width: 768px) {
