--- a/styles/iconAndUrl.module.css
+++ b/styles/iconAndUrl.module.css
@@ -9,7 +9,7 @@
 
 .contentWrapper h4 {
   font-weight: 300;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .iconAndUrlContainer {
